apps/staging/postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: staging
  labels:
    app: postgres
    environment: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        environment: staging
    spec:
      containers:
        - name: postgres
          image: docker.io/library/postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: review/shared-postgre-db
      volumes:
        - name: data
          nfs:
            server: nfs-server.platform.svc.cluster.local
            path: /exports
            readOnly: false
