apps/staging/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: staging
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  type: ClusterIP
