apps/staging/postgres/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres-staging
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`postgres-ufrgs.artr.com.br`)
      kind: Rule
      services:
        - name: postgres
          port: 5432
  tls:
    secretName: wildcard-artr-com-br-tls
