apps/staging/postgres/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-staging
  namespace: staging
spec:
  entryPoints:
    - postgres-staging
  routes:
    - match: HostSNI(`*`)
      services:
        - name: postgres
          port: 5432
